# agentguard

./: .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.cursor/rules/: project-memory.mdc
.cursor/skills/build-orchestration/: SKILL.md
.cursor/skills/devops-engineer/: SKILL.md
.cursor/skills/product-manager/: SKILL.md
.cursor/skills/software-engineer/: SKILL.md
.cursor/skills/solution-architect/: SKILL.md
.cursor/skills/sr-software-engineer/: SKILL.md
.cursor/skills/tester/: SKILL.md
.cursor/skills/ui-ux-expert/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml
adrs/adr-001-streaming-output-validation/: index.html
api-reference/: index.html
architecture/: index.html
articles/how-i-built-open-source-llm-guardrails-with-fastapi/: index.html
comparison/: index.html
cookbook/full-request-lifecycle/: index.html
cookbook/multi-tenant-setup/: index.html
cookbook/red-team-evaluation/: index.html
docs/: PROJECT_MEMORY.md  api-reference.md  architecture.md  comparison.md  index.md  quickstart.md
docs/adrs/: adr-001-streaming-output-validation.md
docs/articles/: how-i-built-open-source-llm-guardrails-with-fastapi.md
docs/cookbook/: full-request-lifecycle.md  multi-tenant-setup.md  red-team-evaluation.md
docs/guides/: adding-a-check.md  creating-prompt-packages.md  deployment.md  middleware-control-plane.md  writing-policies.md
docs/modules/: action-governance.md  gateway.md  input-guardrails.md  observability.md  output-validation.md  policy-engine.md  prompt-framework.md  retrieval-grounding.md  slop-score.md
docs/operations/: guardrail-latency.md  quality-risk-score-monitoring.md
examples/: __init__.py  agent_with_hitl.py  minimal_gateway_openai.py  rag_support_kb.py
guides/adding-a-check/: index.html
guides/creating-prompt-packages/: index.html
guides/deployment/: index.html
guides/middleware-control-plane/: index.html
guides/writing-policies/: index.html
modules/action-governance/: index.html
modules/gateway/: index.html
modules/input-guardrails/: index.html
modules/observability/: index.html
modules/output-validation/: index.html
modules/policy-engine/: index.html
modules/prompt-framework/: index.html
modules/retrieval-grounding/: index.html
modules/slop-score/: index.html
operations/guardrail-latency/: index.html
operations/quality-risk-score-monitoring/: index.html
policies/: default.yaml
policies/examples/: finance_tenant.yaml  general_tenant.yaml  healthcare_tenant.yaml
prompt_packages/rag_qa/: v1.0.0.yaml
prompt_packages/structured_summary/: v1.0.0.yaml
prompt_packages/tool_use/: v1.0.0.yaml
quickstart/: index.html
schemas/: action_authorization.json  input_evaluation.json  output_validation.json  slop_score.json
scripts/: bench_guardrails.py
search/: search_index.json
src/agentguard/: __init__.py  config.py  main.py
src/agentguard/action_governance/: allowlist.py  approval.py  risk_scorer.py  router.py  schemas.py
src/agentguard/common/: dependencies.py  exceptions.py  latency.py  middleware.py  (+1 more)
tests/: conftest.py
tests/test_action_governance/: test_risk.py
tests/test_common/: test_latency_header.py
tests/test_gateway/: test_api.py  test_streaming.py
tests/test_input_guardrails/: test_checks.py  test_engine.py
tests/test_integrations/: test_embedded_gateway.py
tests/test_output_validation/: test_checks.py  test_engine.py  test_quality_risk_in_response.py
tests/test_policy/: test_engine.py
tests/test_prompt_framework/: test_linter.py
tests/test_retrieval/: test_grounding.py
tests/test_slop_score/: test_schema_alias.py  test_scorer.py
(+49 files in other folders)
