[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.4"
description = "LLM guardrails for FastAPI — prompt injection defense, PII detection, LLM output validation, and AI governance (Python 3.11+). Open-source heuristic checks you can audit."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Mani G", email = "MANIGAAA27@users.noreply.github.com" }]
keywords = [
    "llm-guardrails",
    "ai-guardrails",
    "llm-safety",
    "prompt-injection",
    "llm",
    "ai-governance",
    "fastapi",
    "python",
    "prompt-engineering",
    "enterprise-ai",
    "llm-output-validation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "jsonschema>=4.23.0",
    "redis>=5.2.0",
]

[project.urls]
Homepage = "https://github.com/MANIGAAA27/agentguard"
Documentation = "https://manigaaa27.github.io/agentguard/"
Repository = "https://github.com/MANIGAAA27/agentguard"
Issues = "https://github.com/MANIGAAA27/agentguard/issues"
Changelog = "https://github.com/MANIGAAA27/agentguard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
